# ShapeSignatureWithOpenCV_OnAndroidStudio

./: settings.gradle.kts
app/: build.gradle.kts
app/sampledata/: clean_dataset.py  hu_log_transform.py  parte2.ipynb  test.py  test2.py  zernike_dataset_generator.py
app/src/androidTest/java/com/example/visio_p3/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hu_utils.cpp  hu_utils.h  native-lib.cpp
app/src/main/java/com/example/visio_p3/: DrawingView.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/visio_p3/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
